WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20408
REGRESSION: Crash loading WebKit blog post on HTML media elements
https://bugs.webkit.org/show_bug.cgi?id=20408
Summary
REGRESSION: Crash loading WebKit blog post on HTML media elements
Simon Fraser (smfr)
Reported
2008-08-15 16:46:52 PDT
WebKit builds currently crash when loading the URL in the bug. This seems to be transition-related.
Attachments
Testcase
(169 bytes, text/html)
2008-08-15 16:57 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changelog
(3.46 KB, patch)
2008-08-15 17:55 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-08-15 16:57:14 PDT
Created
attachment 22828
[details]
Testcase
Dave Hyatt
Comment 2
2008-08-15 17:02:51 PDT
Is this a regression?
Simon Fraser (smfr)
Comment 3
2008-08-15 17:55:55 PDT
Created
attachment 22830
[details]
Patch, testcase, changelog Fixed the ugly macros to make sure there's an animation in the list. Is this if (isInherit) ... else if (isInitial) change OK?
Mark Rowe (bdash)
Comment 4
2008-08-15 18:48:14 PDT
Regressions are P1s.
Dave Hyatt
Comment 5
2008-08-18 13:48:46 PDT
Comment on
attachment 22830
[details]
Patch, testcase, changelog r=me
Simon Fraser (smfr)
Comment 6
2008-08-18 15:11:27 PDT
Committed
r35825
M WebCore/ChangeLog M WebCore/css/CSSStyleSelector.cpp A LayoutTests/platform/mac/fast/css/transition_shorthand_parsing-expected.txt M LayoutTests/ChangeLog A LayoutTests/fast/css/transition_shorthand_parsing.html
r35825
= 6040db395a99614c25b06ba9ea4fc7dfec42f1ea (trunk)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug