        Reviewed by Dave Hyatt

Need to make sure we have an Animation in the AnimationList
        before setting the initial value.
        https://bugs.webkit.org/show_bug.cgi?id=20408

        Test: fast/css/transition_shorthand_parsing.html

        * css/CSSStyleSelector.cpp:


Canonical link: https://commits.webkit.org/28231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35825 268f45cc-cd09-0410-ab3c-d52691b4dbfc